--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <tbody>
             <tr>
                 <td>2012</td>
-                <td>1 grade at School №1</td>
+                <td>First grade at School №1</td>
             </tr>
             <tr>
                 <td>2018-2020</td>
