--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <tr>
             <td><img src="images\Spongebob.png" alt="Sponge Bob" width="150" height="150"></td>
             <td><h1>Muboriz Isroilov</h1>
-                <p><em>Director of the <strong><a href="https://www.zlti.com/">ZL Tech</a></strong></em></p>
-                <p>I'm Software and Web Developer. I like create programs and websites. I also like watch football.</p></td>
+                <p>Director of the <strong>ZL Corparation</strong></p>
+                <p><em> I'm Web Developer. I like create programs and websites. I also like watching football.</em></p></td>
         </tr>
     </table>
     <hr>
@@ -20,7 +20,7 @@
     <ul>
         <li>Math</li>
         <li>Physics</li>
-        <li><a href="https://www.youtube.com/watch?v=xKJmEC5ieOk"> IT</a></li>
+        <li>IT</li>
         <li>Geometry</li>
         <li>Russian</li>
         <li>English</li>
