--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Muboriz's Personal Site</title>
 </head>
 <body>
+    <p align="right">Ver: 0.1.1</p>
     <table cellspacing="10">
         <tr>
             <td><img src="images\Spongebob.png" alt="Sponge Bob" width="150" height="150"></td>
@@ -26,7 +27,7 @@
         <li>English</li>
     </ul>
     <hr>
-    <table>
+    <table cellspacing="10">
         <thead>
             <tr>
                 <th>Dates</th>
@@ -35,12 +36,16 @@
         </thead>
         <tbody>
             <tr>
-                <td>2012</td>
+                <td>2012-2013</td>
                 <td>First grade at School №1</td>
             </tr>
             <tr>
                 <td>2018-2020</td>
                 <td>7-8 grades at "Lyceum for gifted students"</td>
+            </tr>
+            <tr>
+                <td>2020-2021</td>
+                <td>Continue studing at School №1"</td>
             </tr>
         </tbody>
         
