--- a/hobbies.html
+++ b/hobbies.html
@@ -7,6 +7,7 @@
     <title>My Hobbies</title>
 </head>
 <body>
+    <p align="right">Ver: 0.1.1</p>
     <h3>Hobby</h3>
     <ol>
         <li>Deal with computer</li>
