--- a/contact-me.html
+++ b/contact-me.html
@@ -7,6 +7,7 @@
     <title>Contact Me</title>
 </head>
 <body>
+    <p align="right">Ver: 0.1.1</p>
     <h1>My Contact Details:</h1>
     <p>Address: S. Usmonov, №13</p>
     <p>Phone Number: +992927763141</p>
